# f3d-python-wheels

./: .gitignore  .gitmodules  CMakeLists.txt  pyproject.toml  setup.py
.github/workflows/: wheels.yml
